--- a/visualizations/comparison.html
+++ b/visualizations/comparison.html
@@ -16,7 +16,7 @@
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-black" href="index.html">Latitude</a>
+            <a class="navbar-brand text-black" href="landingpage.html">Latitude</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -53,22 +53,22 @@
         <div class="row">
             <div class="col-md-6">
                 <h3 class="text-center">vs. Max Teperature</h3>
-                <a href="temperature.html"><img width="100%" src="assets/images/Fig1.png"></a>   
+                <a href="temperature.html"><img width="100%" src="../assets/images/Fig1.png"></a>   
             </div>
             <div class="col-md-6">
                 <h3 class="text-center">vs. Humidity</h3>
-                <a href="humidity.html"><img width="100%" src="assets/images/Fig2.png"></a>  
+                <a href="humidity.html"><img width="100%" src="../assets/images/Fig2.png"></a>  
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-6">
                 <h3 class="text-center">vs. Cloudiness </h3>
-                <a href="cloudiness.html"><img width="100%" src="assets/images/Fig3.png"></a>   
+                <a href="cloudiness.html"><img width="100%" src="../assets/images/Fig3.png"></a>   
             </div>
             <div class="col-md-6">
                 <h3 class="text-center">vs. Wind Speed</h3>
-                <a href="wind.html"><img width="100%" src="assets/images/Fig4.png"></a>  
+                <a href="wind.html"><img width="100%" src="../assets/images/Fig4.png"></a>  
             </div>
         </div>   
     </div>
