landing page changes

--- a/visualizations/landingpage.html
+++ b/visualizations/landingpage.html
@@ -69,7 +69,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="temperature.html"><img src="../assets/images/Fig1.png" width="70%"  alt="temperature">
+                            <a href="temperature.html"><img src="images/Fig1.png" width="70%"  alt="temperature">
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
@@ -81,7 +81,7 @@
                         </div>
 
                         <div class="col-3 col-md-6">
-                            <a href="wind.html"><img src="../assets/images/Fig4.png"width="70%"  alt="wind speed"></a>
+                            <a href="wind.html"><img src="Web-Design-Challenge/assets/images/Fig4.png"width="70%"  alt="wind speed"></a>
                         </div>
                     </div>
                 </div>
