landing page test

--- a/visualizations/landingpage.html
+++ b/visualizations/landingpage.html
@@ -73,7 +73,7 @@
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="humidity.html"><img src="../assets/images/Fig2.png" width="70%" alt="humidity"></a>
+                            <a href="humidity.html"><img src="/assets/images/Fig2.png" width="70%" alt="humidity"></a>
                         </div>
                    
                         <div class="col-3 col-md-6">
