--- a/visualizations/landingpage.html
+++ b/visualizations/landingpage.html
@@ -55,7 +55,7 @@
                     <h2 style="color: teal">Summary: Latitude vs. X</h2>
                     <hr>
                     <div class="thumbnail">
-                        <img class="img-thumbnail float-left" src="assets/images/Fig1.png " width="70%" alt="temperature">
+                        <img class="img-thumbnail float-left" src="../assets/images/Fig1.png " width="70%" alt="temperature">
                     </div>
                     <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.  </p> 
                     
@@ -69,19 +69,19 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="temperature.html"><img src="assets/images/Fig1.png" width="70%"  alt="temperature">
+                            <a href="temperature.html"><img src="../assets/images/Fig1.png" width="70%"  alt="temperature">
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="humidity.html"><img src="assets/images/Fig2.png" width="70%" alt="humidity"></a>
+                            <a href="humidity.html"><img src="../assets/images/Fig2.png" width="70%" alt="humidity"></a>
                         </div>
                    
                         <div class="col-3 col-md-6">
-                            <a href="cloudiness.html"><img src="assets/images/Fig3.png" width="70%"  alt="cloudiness"></a>
+                            <a href="cloudiness.html"><img src="../assets/images/Fig3.png" width="70%"  alt="cloudiness"></a>
                         </div>
 
                         <div class="col-3 col-md-6">
-                            <a href="wind.html"><img src="assets/images/Fig4.png"width="70%"  alt="wind speed"></a>
+                            <a href="wind.html"><img src="../assets/images/Fig4.png"width="70%"  alt="wind speed"></a>
                         </div>
                     </div>
                 </div>
