humidity page typo change

--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -53,7 +53,7 @@
                     <hr>
                     <img src="../assets/images/Fig2.png" width="100%" alt="humidity">
                     <br>
-                    <p>There is no clear correlation between humidity and latitude, even near the equator. It appears as though 100% humidity is very common against all latitudes. </p>
+                    <p>There is no clear correlation between humidity and latitude, even near the equator. It appears as though 100% humidity is common across all latitudes. </p>
                 </div>
             </div>
             <!--visualizations container adjustments-->
